--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                 <version>${antlr.version}</version>
                 <configuration>
                     <outputDirectory>${project.build.directory}/generated-sources/antlr4</outputDirectory>
-                    <listener>true</listener>
+                    <listener>false</listener>
                     <visitor>true</visitor>
                 </configuration>
                 <executions>
