--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 group 'fr.aiko'
-version '0.4.0-alpha'
+version '0.4.0-alpha.2'
 
 repositories {
     mavenCentral()
