--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.6'
+
+    testImplementation 'io.github.hakky54:consolecaptor:1.0.0'
 }
 
 jar {
